# simple-command-state-mqtt-client-windows-desktop-app-from-slint

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  mqtt_handle.rs  node_state_entity.rs  slint_handle.rs
src/mqtt/: connect.rs  mod.rs  pool.rs  receiver.rs  sender.rs
ui/: beauty_button.slint  command_input.slint  command_set_window.slint  main_view.slint
