[package]
name = "slint_rmqtt"
version = "0.1.0"
edition = "2024"
build = "build.rs"
[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.24.0" }
rand = "0.9.2"
slint = { version = "1.12.1" }
bon = "3.6.5"
once_cell = { version = "1.21.3" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"
[build-dependencies]
slint-build = "1.12.1"